chore: attempt at fixing keyboard on iphone

--- a/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
+++ b/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
@@ -38,15 +38,14 @@ tui-textfield[multi] {
         }
     }
 
-    &._empty {
-        .t-container {
-            & ~ .t-content .t-clear {
-                display: none;
-            }
+    &._empty .t-container ~ .t-content .t-clear {
+        display: none;
+    }
 
-            input:defined::placeholder {
-                opacity: 1;
-            }
+    &._empty .t-container,
+    &[data-focus='true']:not(:focus-within) .t-container {
+        input::placeholder {
+            opacity: 1;
         }
     }
 
